--- a/src/app/pages/setup/setup.component.html
+++ b/src/app/pages/setup/setup.component.html
@@ -1,5 +1,6 @@
 <div class="full-screen page-content">
   <div class="wrapper">
+    <img src="//de4og7052286.witcloud.net/file_3838828808121541386553227.jpg?imageView2/1/w/432/h/270/format/jpg/interlace/1" alt="">
     <div class="text-wrapper">
       <h1 class="title-text">
         Today
@@ -10,7 +11,7 @@
       开始
     </button>
     <div class="copy-right">
-      Copyright © 2018 Wendell Hu
+      Copyright © 2018 Heather Yu
     </div>
   </div>
 </div>
