--- a/src/app/pages/setup/setup.component.less
+++ b/src/app/pages/setup/setup.component.less
@@ -1,11 +1,27 @@
-h1{
+h1 {
   padding: 10px;
 }
 
-input{
-  margin-bottom: 10px;
-  width: 400px;
-}
-.wrapper{
+.wrapper {
+  position: relative;
   text-align: center;
+  width: 80vw;
+  height: 80vh;
+  margin: 0 auto;
+  box-sizing: border-box;
+  img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
+  input {
+    margin-bottom: 10px;
+    width: 200px;
+  }
+  .copy-right {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    text-align: center;
+  }
 }
