--- a/src/styles.less
+++ b/src/styles.less
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'node_modules/ng-zorro-antd/ng-zorro-antd.min.css';
+@import './assets/index.less';
 body{
   background: #fff;
   padding: 10px;
