--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,7 +1,6 @@
 <nz-layout class="full-screen">
-  <nz-sider nzCollapsible
-            [(nzCollapsed)]="isCollapsed"
-            [nzWidth]="260">
+  <nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" [nzWidth]="260">
+    <app-left-control></app-left-control>
   </nz-sider>
   <nz-content class="container">
   </nz-content>
