--- a/src/app/pages/main/left-control/left-control.component.html
+++ b/src/app/pages/main/left-control/left-control.component.html
@@ -1,24 +1,21 @@
 <!-- left-control.component.html -->
 <div class="header-wrapper">
   <img src="./assets/images/my.jpg">
-  <span class="username-text"
-        *ngIf="!isCollapsed">
+  <span class="username-text" *ngIf="!isCollapsed">
     {{username}}
   </span>
-  <div class="floating-btn header-btn"
-       *ngIf="!isCollapsed">
+  <div class="floating-btn header-btn" *ngIf="!isCollapsed">
     <i class="anticon anticon-setting"></i>
   </div>
-  <div class="floating-btn header-btn"
-       *ngIf="!isCollapsed">
+  <div class="floating-btn header-btn" *ngIf="!isCollapsed">
     <i class="anticon anticon-calendar"></i>
   </div>
 </div>
 <div class="list-wrapper">
+  <app-list [isCollapsed]="isCollapsed" #greet></app-list>
+  <!-- <app-list [isCollapsed]="isCollapsed" #greet></app-list> -->
   <div class="add-list-btn-wrapper">
-    <button nz-button
-            nzGhost
-            nzType="dashed">
+    <button nz-button nzGhost nzType="dashed"  (click)="openAddListModal()">
       <i class="anticon anticon-plus"></i>
       <span *ngIf="!isCollapsed">新列表</span>
     </button>
